--- a/src/Pages/HomePage/HomePage.scss
+++ b/src/Pages/HomePage/HomePage.scss
@@ -1,82 +1,7 @@
 .wrapper-homepage{
     width: 100%;
-    max-width: 1360px;
     background-color: #fff;
-    padding: 2rem;
-    margin: 0 auto;
     display: grid;
-    overflow-y: scroll;
-	overflow-x: hidden;
-    .title {
-        font-family: Syne;
-        padding: 8rem 12rem 5.8rem;
-        font-size: 50px;
-        font-weight: 700;
-        text-align: center;
-    }
-    .banner-img{
-        margin: 0 auto;
-        object-fit: cover;
-        width: 813px;
-        height: 512px;
-    }
-    &:hover::-webkit-scrollbar-thumb {
-    z-index: 2;
-    visibility: visible;
-}
-
-    &::-webkit-scrollbar {
-        width: 8px;
-    }
-
-    &::-webkit-scrollbar-track {
-        background: transparent;
-        margin: 5px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        border-radius: 8px;
-        background: #bdbdbd;
-        z-index: 1;
-        visibility: hidden;
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-        background: #858585;
-    }
-}
-
-
-.banner-scroll{
-    width: 100%;
-    // height: 450px;
-    position: relative;
-}
-
-.title-scroll-line1 {
-    font-family: Syne;
-    font-size: 60px;
-    font-weight: 700;
-    text-align: center;
-    color: #fff;
-    position: absolute;
-    left: 35.23%;
-    top: 10%;
-}
-
-.title-scroll-line2 {
-    font-family: Syne;
-    font-size: 60px;
-    font-weight: 700;
-    text-align: center;
-    color: #fff;
-    position: absolute;
-    left: 40.03%;
-    top: 18%;
-}
-
-.arrow {
-    position: absolute;
-    left: 48.799%;
-    top: 30%;
+	overflow: hidden;
+    height: 2000px;
 }
